--- a/MobileEvents/app/src/main/res/layout/activity_main.xml
+++ b/MobileEvents/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.examenTodos.MainActivity">
+        tools:context="com.example.examenEvents.MainActivity">
 
     <TextView
             android:id="@+id/netStatus"
