--- a/MobileEvents/app/src/main/res/layout/details_layout.xml
+++ b/MobileEvents/app/src/main/res/layout/details_layout.xml
@@ -12,14 +12,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
+            android:layout_margin="30dp"
             android:textSize="20sp"
             android:textColor="#000000"
             android:id="@+id/textView1"
             android:layout_marginBottom="20dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
-            android:layout_marginLeft="20dp"/>
+            />
 
     <TextView
             android:text="TEXT:"
@@ -27,53 +27,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:layout_margin="30dp"
             android:textColor="#000000"
             android:layout_marginBottom="20dp"
             app:layout_constraintTop_toBottomOf="@id/textView1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="@id/textView1"
-            app:layout_constraintBottom_toTopOf="@+id/textViewStatus"
-    />
-
-    <TextView
-            android:text="Status:"
-            android:id="@+id/textViewStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#000000"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="@id/textView1"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
-    />
+            />
+
 
     <TextView
-            android:id="@+id/textViewStatusValue"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewText"
-            app:layout_constraintLeft_toRightOf="@id/textViewStatus"
-            app:layout_constraintStart_toEndOf="@id/textView3"
-            app:layout_constraintBottom_toTopOf="@+id/textViewTextData"
-            android:layout_marginLeft="20dp"/>
-
-    <TextView
-            android:text="UPDATED  :"
+            android:text="DATA  :"
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#000000"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/textView2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="@id/textView2"
-    />
+            />
 
     <TextView
             tools:text="TextView"
@@ -82,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:textSize="18sp"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/textView3"
             app:layout_constraintStart_toEndOf="@id/textView3"
@@ -107,7 +84,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="20dp"/>
 
-    <TextView
+    <EditText
             tools:text="TextView"
             android:id="@+id/textViewTextData"
             android:layout_width="wrap_content"
@@ -116,8 +93,9 @@
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
             android:textSize="18sp"
-            android:lines="3"
-            app:layout_constraintTop_toBottomOf="@id/textViewStatusValue"
+            android:lines="1"
+            android:inputType="date"
+            app:layout_constraintTop_toBottomOf="@id/textViewText"
             app:layout_constraintLeft_toRightOf="@id/textView3"
             app:layout_constraintStart_toEndOf="@id/textView3"
             app:layout_constraintBaseline_toBaselineOf="@id/textView3"
@@ -126,7 +104,7 @@
 
     <Button
             android:onClick="onUpdate"
-            android:text="@string/update"
+            android:text="@string/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteY="341dp"
