--- a/MobileEvents/app/src/main/res/layout/details_layout.xml
+++ b/MobileEvents/app/src/main/res/layout/details_layout.xml
@@ -84,7 +84,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="20dp"/>
 
-    <EditText
+    <TextView
             tools:text="TextView"
             android:id="@+id/textViewTextData"
             android:layout_width="wrap_content"
@@ -94,7 +94,8 @@
             android:layout_marginRight="30dp"
             android:textSize="18sp"
             android:lines="1"
-            android:inputType="date"
+            android:hint="@string/chooseDate"
+            android:onClick="showDatePickerDialog"
             app:layout_constraintTop_toBottomOf="@id/textViewText"
             app:layout_constraintLeft_toRightOf="@id/textView3"
             app:layout_constraintStart_toEndOf="@id/textView3"
@@ -102,6 +103,18 @@
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="20dp"/>
 
+    <!--<DatePicker-->
+            <!--android:id="@+id/datePicker"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/textViewText"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:visibility="gone"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+/>
     <Button
             android:onClick="onUpdate"
             android:text="@string/add"
@@ -109,6 +122,7 @@
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteY="341dp"
             tools:layout_editor_absoluteX="224dp"
+            android:layout_marginTop="100dp"
             app:layout_constraintTop_toBottomOf="@id/textViewTextData"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
